fix einige Typos, update some JavaDocs